--- a/404.md
+++ b/404.md
@@ -1,7 +1,14 @@
 ---
-layout: post
+layout: page
 title: 404
 show_tile: false
 ---
 
-Page not found! :(
+<style>
+h1 {text-align: center;}
+p {text-align: center;}
+div {text-align: center;}
+</style>
+
+<h2>P A G E</h2>
+<h2> NOT</h2> <h2>FOUND</h2>
